fix chevron right alignment using margin bottom

--- a/assets/css/3-modules/_events.sass
+++ b/assets/css/3-modules/_events.sass
@@ -51,7 +51,7 @@ selection#mobile
 
 @media (max-width: 753px)
 	selection#mobile
-		display: inline-block
+		display: none
 		#cont_cb2b792c316743129afbb522a92cdfbb
 			height: 150px
 			width: 100vw !important
